tests/snapshots/run_wpt_conformance__litert_clamp_float32_3D_tensor_specified_negative_options_minValue_and_positive_options_maxValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float32 3D tensor specified negative options.minValue and positive options.maxValue",
    "litert",
    "PASS",
)
