tests/snapshots/run_wpt_conformance__litert_clamp_int32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp int32 1D tensor, litert
 clamp :: clamp int32 1D tensor: index 0: actual=-1073741824 expected=-2 tolerance=0
  inputs: clampInput: [-2147483648, 2147483647, -4, -2, 1, 0, 2, 4]
  expected clampOutput: [-2, 2147483645, -2, -2, 1, 0, 2, 4]
  actual clampOutput: [-1073741824, 1325400064, -4, -2, 1, 0, 2, 4]
  expected clampOutput full nd:
(shape [8])
[-2, 2147483645, -2, -2, 1, 0, 2, 4]
  actual clampOutput full nd:
(shape [8])
[-1073741824, 1325400064, -4, -2, 1, 0, 2, 4]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: i32[8];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=2147483645, minValue=-2);
  }

  outputs { clampOutput; }
}
