tests/snapshots/run_wpt_conformance__litert_clamp_int64_1D_tensor_with_bigint_max.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp int64 1D tensor with bigint max, litert
 Failed to build graph: failed to compile model: Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: i64[8];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue="9007199254740992", minValue=-2);
  }

  outputs { clampOutput; }
}
